Chart Class drawing

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "TypeScript",
     "JavaScript",
     "Grunt",
-    "HTML5"
+    "HTML5",
     "listingslab"
   ],
   "author": "Chris Dorward <listingslab@gmail.com>",
